2021-08-01  Ryosuke Niwa  <rniwa@webkit.org>

        Calling unobserve on ResizeObserver should not clear existing observations in active targets
        https://bugs.webkit.org/show_bug.cgi?id=228693

        Reviewed by Chris Dumez.

        The bug was caused by ResizeObserver::removeObservation removing it from the active targets.

        Note that there is nothing in the specification which alludes to this behavior,
        and the new behavior is consistent with Firefox and the way IntersectionObserver works:
        https://drafts.csswg.org/resize-observer/#dom-resizeobserver-unobserve

        To keep elements alive while they're in the active targets but not in the observation targets,
        this patch also makes each element of the active observation as opaque roots of ResizeObserver
        in ResizeObserver::isReachableFromOpaqueRoots.

        Test: resize-observer/resize-observer-keeps-element-of-queued-entry-alive.html

        * page/ResizeObserver.cpp:
        (WebCore::ResizeObserver::deliverObservations):
        (WebCore::ResizeObserver::isReachableFromOpaqueRoots const):
        (WebCore::ResizeObserver::removeObservation):

2021-08-02  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION(r279800): IntersectionObserver may never get a delivery of an observation if the element
        has been unobserved and is disconnected
        https://bugs.webkit.org/show_bug.cgi?id=228679

        Reviewed by Chris Dumez.

        The bug was caused by the elements of the pending entries not being considered as opaque roots
        of the intersection observer. If the intersection observer is no longer observing those elements,
        the JS wrapper of the intersection observer may be collected erroneously.

        This patch addresses this issue by explicitly treating the elements of pending entries as
        opaque roots of the intersection observer in IntersectionObserver::isReachableFromOpaqueRoots.
